--- a/index.html
+++ b/index.html
@@ -23,8 +23,49 @@
         <section id="inicio">
             <h1>Seja Bem Vindo!</h1>
             <p>Aqui você encontrará informações sobre o uso do HTML5 semântico para desenvolvimento web.</p>
-
         </section>
+
+        <section id="sobre">
+            <h2> Sobre o HTML5 semântico</h2>
+            <p>O HTML5 semântico é uma evolução da lingugem HTML que permite aos desenvolvedores criar mais
+                siginificativas e ricas em conteúdo para seus sites e aplicativos.
+            </p>
+        </section>
+
+        <section id="linguagens">
+            <h2> Outras linguagens associadas</h2>
+            <ul>
+                <li>HiperText Markup Language - HTML</li>
+                <li>Cascading Style Sheet - CSS</li>
+                <li>JavaScript - JS</li>
+            </ul>
+        </section>
+
+        <section id="contato">
+            <h2>Fale Conosco</h2>
+            <form>
+                <label for="nome">Nome:</label>
+                <input type="text" name="nome" id="nome">
+                <label>E-mail:</label>
+                <input type="text" name="email" id="email">
+                <label>mensagem:</label>
+                <textarea type="text" name="mensagem" id="mensagem"></textarea>
+               
+                <div>
+                    <input type="checkbox" name="checkbox" id="checkbox">
+                    <label for="checkbox"> Desejo receber mais e-mails</label>
+                </div>
+                <input id="buttom" type="submit" value="Enviar"
+
+                </form>
+        </section>
+
+
+
+
+
+
+
     </main>
 
     <Footer>
