troquei o bem vindo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <section id="inicio">
         <br />
-        <h1>Welcome!</h1>
+        <h1>Bem-vindo!</h1>
         <p>
           Aqui você encontrará informações sobre o uso do HTML5 semântico para
           desenvolvimento web.
