--- a/index.html
+++ b/index.html
@@ -29,29 +29,37 @@
         </p>
       </section>
 
-      <div class="html">
-        <section id="sobre">
-          <h2>Sobre o HTML5 semântico</h2>
-          <br />
-          <p>
-            O HTML5 semântico é uma evolução da lingugem HTML que permite aos
-            desenvolvedores criar mais siginificativas e ricas em conteúdo para
-            seus sites e aplicativos.
-          </p>
-          <div class="image">
-            <img src="./image/702305.png" alt=""></div>
+    <section id="sobre">
+        <div class="sobre">       
+              <h2>Sobre o HTML5 semântico</h2>
+              <br>
+        <div class="html"> 
+              <div><p>
+                O HTML5 semântico é uma evolução da lingugem HTML que permite aos
+                desenvolvedores criar mais siginificativas e ricas em conteúdo para
+                seus sites e aplicativos.
+              </p></div>
+            
+         <div class="image">
+                <img src="./image/702305.png" height="100px">
         </div>
-        </section>
+        </div>
+        </div>
+        
+    </section>
       </div>
 
-      <div linguagens>
+      <div class="linguagens">
         <section id="linguagens">
+
           <h2>Outras linguagens associadas</h2>
 
-          <li>HiperText Markup Language - HTML</li>
-
-          <li>Cascading Style Sheet - CSS</li>
-          <li>JavaScript - JS</li>
+          <div class="linguage">
+              <li>HiperText Markup Language - HTML</li>
+              <li>Cascading Style Sheet - CSS</li>
+              <li>JavaScript - JS</li>
+          </div>
+          <img src="./image/logo-logica-de-programacao-322x322.png" width="100px" class="imagem">
         </section>
       </div>
 
